--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ button {
 <div class="reel">
   <div class="card">
     <div class="cat">🐱🎀</div>
-    <h2>Komal,<br>will you be my Valentine? 💖</h2>
+    <h2>Mausam,<br>will you be my Valentine? 💖</h2>
 
     <div class="buttons">
       <button id="yes" onclick="yesClick()">Yes 💕</button>
